--- a/src/robot_localization/package.xml
+++ b/src/robot_localization/package.xml
@@ -15,6 +15,7 @@
   <exec_depend>numpy</exec_depend> 
   <exec_depend>gtsam</exec_depend> 
   <exec_depend>open3d</exec_depend> 
+  <exec_depend>math</exec_depend> 
 
   <export>
     <build_type>ament_python</build_type>
